# ask-my-csv

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml
src/: constants.py
